Added many tests for XMLMsgToJSON